--- a/TheWorldOfSoinc.cbp
+++ b/TheWorldOfSoinc.cbp
@@ -44,9 +44,11 @@
 		<Unit filename="cb.bmp" />
 		<Unit filename="files/SuperMario256.ttf" />
 		<Unit filename="files/map1.png" />
-		<Unit filename="include/Player.h" />
+		<Unit filename="include/IGCarte.h" />
+		<Unit filename="include/MOPlayer.h" />
 		<Unit filename="main.cpp" />
-		<Unit filename="src/Player.cpp" />
+		<Unit filename="src/IGCarte.cpp" />
+		<Unit filename="src/MOPlayer.cpp" />
 		<Extensions />
 	</Project>
 </CodeBlocks_project_file>
