--- a/TheWorldOfSoinc.cbp
+++ b/TheWorldOfSoinc.cbp
@@ -9,7 +9,7 @@
 			<Target title="Debug">
 				<Option output="bin/Debug/TheWorldOfSoinc" prefix_auto="1" extension_auto="1" />
 				<Option object_output="obj/Debug/" />
-				<Option type="1" />
+				<Option type="0" />
 				<Option compiler="gcc" />
 				<Compiler>
 					<Add option="-g" />
@@ -40,7 +40,12 @@
 		</Build>
 		<Compiler>
 			<Add option="-Wall" />
+			<Add option="-DSFML_STATIC" />
+			<Add directory="../SFML-2.6.0/include" />
 		</Compiler>
+		<Linker>
+			<Add directory="../SFML-2.6.0/lib" />
+		</Linker>
 		<Unit filename="files/SuperMario256.ttf" />
 		<Unit filename="files/map1.png" />
 		<Unit filename="include/Interface/IGCarte.h" />
