--- a/TheWorldOfSoinc.cbp
+++ b/TheWorldOfSoinc.cbp
@@ -16,6 +16,7 @@
 					<Add directory="include" />
 					<Add directory="include/Modele" />
 					<Add directory="include/Interface" />
+					<Add directory="include/View" />
 				</Compiler>
 				<Linker>
 					<Add library="sfml-graphics" />
@@ -33,6 +34,7 @@
 					<Add directory="include" />
 					<Add directory="include/Modele" />
 					<Add directory="include/Interface" />
+					<Add directory="include/View" />
 				</Compiler>
 				<Linker>
 					<Add option="-s" />
@@ -59,6 +61,7 @@
 		<Unit filename="include/Interface/IGSol.h" />
 		<Unit filename="include/Modele/MOMap.h" />
 		<Unit filename="include/Modele/MOPlayer.h" />
+		<Unit filename="include/View/MainMenu.h" />
 		<Unit filename="log.txt" />
 		<Unit filename="main.cpp" />
 		<Unit filename="src/Interface/IGCarte.cpp" />
@@ -68,6 +71,7 @@
 		<Unit filename="src/Interface/IGSol.cpp" />
 		<Unit filename="src/Modele/MOMap.cpp" />
 		<Unit filename="src/Modele/MOPlayer.cpp" />
+		<Unit filename="src/View/MainMenu.cpp" />
 		<Extensions />
 	</Project>
 </CodeBlocks_project_file>
