--- a/TheWorldOfSoinc.cbp
+++ b/TheWorldOfSoinc.cbp
@@ -53,11 +53,13 @@
 			<Add directory="../SFML-2.6.0/lib" />
 		</Linker>
 		<Unit filename="files/SuperMario256.ttf" />
+		<Unit filename="files/exit.png" />
 		<Unit filename="files/sol.png" />
 		<Unit filename="include/Interface/IGCarte.h" />
 		<Unit filename="include/Interface/IGDrapeau.h" />
 		<Unit filename="include/Interface/IGMob.h" />
 		<Unit filename="include/Interface/IGMur.h" />
+		<Unit filename="include/Interface/IGMurInvisible.h" />
 		<Unit filename="include/Interface/IGSol.h" />
 		<Unit filename="include/Modele/MOMap.h" />
 		<Unit filename="include/Modele/MOPlayer.h" />
@@ -68,6 +70,7 @@
 		<Unit filename="src/Interface/IGDrapeau.cpp" />
 		<Unit filename="src/Interface/IGMob.cpp" />
 		<Unit filename="src/Interface/IGMur.cpp" />
+		<Unit filename="src/Interface/IGMurInvisible.cpp" />
 		<Unit filename="src/Interface/IGSol.cpp" />
 		<Unit filename="src/Modele/MOMap.cpp" />
 		<Unit filename="src/Modele/MOPlayer.cpp" />
