Ajouts des textures

--- a/TheWorldOfSoinc.cbp
+++ b/TheWorldOfSoinc.cbp
@@ -53,7 +53,12 @@
 			<Add directory="../SFML-2.6.0/lib" />
 		</Linker>
 		<Unit filename="files/SuperMario256.ttf" />
+		<Unit filename="files/bloc.png" />
+		<Unit filename="files/brique.png" />
 		<Unit filename="files/exit.png" />
+		<Unit filename="files/goomba.png" />
+		<Unit filename="files/koopa.png" />
+		<Unit filename="files/soinc.png" />
 		<Unit filename="files/sol.png" />
 		<Unit filename="include/Interface/IGCarte.h" />
 		<Unit filename="include/Interface/IGDrapeau.h" />
@@ -61,9 +66,10 @@
 		<Unit filename="include/Interface/IGMur.h" />
 		<Unit filename="include/Interface/IGMurInvisible.h" />
 		<Unit filename="include/Interface/IGSol.h" />
+		<Unit filename="include/Interface/MainMenu.h" />
+		<Unit filename="include/Interface/MurInvisible.h" />
 		<Unit filename="include/Modele/MOMap.h" />
 		<Unit filename="include/Modele/MOPlayer.h" />
-		<Unit filename="include/View/MainMenu.h" />
 		<Unit filename="log.txt" />
 		<Unit filename="main.cpp" />
 		<Unit filename="src/Interface/IGCarte.cpp" />
@@ -72,9 +78,10 @@
 		<Unit filename="src/Interface/IGMur.cpp" />
 		<Unit filename="src/Interface/IGMurInvisible.cpp" />
 		<Unit filename="src/Interface/IGSol.cpp" />
+		<Unit filename="src/Interface/MainMenu.cpp" />
+		<Unit filename="src/Interface/MurInvisible.cpp" />
 		<Unit filename="src/Modele/MOMap.cpp" />
 		<Unit filename="src/Modele/MOPlayer.cpp" />
-		<Unit filename="src/View/MainMenu.cpp" />
 		<Extensions />
 	</Project>
 </CodeBlocks_project_file>
