--- a/TheWorldOfSoinc.cbp
+++ b/TheWorldOfSoinc.cbp
@@ -9,8 +9,9 @@
 			<Target title="Debug">
 				<Option output="bin/Debug/TheWorldOfSoinc" prefix_auto="1" extension_auto="1" />
 				<Option object_output="obj/Debug/" />
-				<Option type="0" />
+				<Option type="1" />
 				<Option compiler="gcc" />
+				<Option use_console_runner="0" />
 				<Compiler>
 					<Add option="-g" />
 					<Add directory="include" />
@@ -65,9 +66,9 @@
 		<Unit filename="include/Interface/IGMob.h" />
 		<Unit filename="include/Interface/IGMur.h" />
 		<Unit filename="include/Interface/IGMurInvisible.h" />
+		<Unit filename="include/Interface/IGRectangleShape.h" />
 		<Unit filename="include/Interface/IGSol.h" />
 		<Unit filename="include/Interface/MainMenu.h" />
-		<Unit filename="include/Interface/MurInvisible.h" />
 		<Unit filename="include/Modele/MOMap.h" />
 		<Unit filename="include/Modele/MOPlayer.h" />
 		<Unit filename="log.txt" />
@@ -77,9 +78,9 @@
 		<Unit filename="src/Interface/IGMob.cpp" />
 		<Unit filename="src/Interface/IGMur.cpp" />
 		<Unit filename="src/Interface/IGMurInvisible.cpp" />
+		<Unit filename="src/Interface/IGRectangleShape.cpp" />
 		<Unit filename="src/Interface/IGSol.cpp" />
 		<Unit filename="src/Interface/MainMenu.cpp" />
-		<Unit filename="src/Interface/MurInvisible.cpp" />
 		<Unit filename="src/Modele/MOMap.cpp" />
 		<Unit filename="src/Modele/MOPlayer.cpp" />
 		<Extensions />
